h2c/client-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          http_protocol_options:
            enable_h2c_upgrade: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /3
                route:
                  prefix_rewrite: /
                  cluster: server3
              - match:
                  prefix: /2
                route:
                  prefix_rewrite: /
                  cluster: server2
              - match:
                  prefix: /1
                route:
                  prefix_rewrite: /
                  cluster: server1
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: server3
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: server3
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 139.162.123.134
                port_value: 80
  - name: server2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: server2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 139.162.123.134
                port_value: 80
  - name: server1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: server1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 34.193.212.251
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
